maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but 'if' found.
      if (testV(x-1,y)) {if (!aMurOuest(x,y) && getIndication(x-1,y)!=9999) {setIndication(x-1,y,k+1);Tx(1)=x-1;Ty(1)=y}}
      ^JediEscaper:16: error: ';' expected but 'if' found.
      if (testV(x,y+1)) {if (!aMurNord(x,y+1) && getIndication(x,y+1)!=9999) {setIndication(x,y+1,k+1);Tx(2)=x;Ty(2)=y+1}}
      ^